@@ -1,3 +1,13 @@
+2008-02-01  Jorn Baayen  <jorn@openedhand.com>
+
+	* libgssdp/gssdp-resource-browser.c:
+	(gssdp_resource_browser_set_property),
+	(gssdp_resource_browser_dispose),
+	(gssdp_resource_browser_set_active), (clear_cache):
+
+	Emit multiple M-SEARCH requests because UDP is unreliable.
+	Based on a patch by Zeeshan Ali.
+
 2008-01-31  Jorn Baayen  <jorn@openedhand.com>
 
 	* libgssdp/gssdp-client-private.h:
